--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>contador</title>
 </head>
 <body>
-    <h1>Contador</h1>
-<p>0</p>
-<button>adicionar</button>
+    <h1 class="titulo">Contador</h1>
+<p class="resultado">0</p>
+<button class="dim">adicionar</button>
+<button class="add">diminuir</button>
 
-
+<link rel="stylesheet" href="style.css">
 </body>
 </html>
