--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <body>
     <h1 class="titulo">Contador</h1>
 <p class="resultado">0</p>
-<button class="dim">adicionar</button>
-<button class="add">diminuir</button>
+
+<div>
+<button onclick="menos" class="dim">Diminuir</button>
+<button onclick="mais" class="add">Adicionar</button>
+</div>
 
 <link rel="stylesheet" href="style.css">
+<script src="main.js"></script>
 </body>
 </html>
