--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <title>contador</title>
 </head>
+
 <body>
     <h1 class="titulo">Contador</h1>
-<p class="resultado">0</p>
+    <p id="resultado"></p>
 
-<div>
-<button onclick="menos" class="dim">Diminuir</button>
-<button onclick="mais" class="add">Adicionar</button>
-</div>
+    <button onclick="menos" class="dim">Diminuir</button>
+    <button onclick="mais" class="add">Adicionar</button>
 
-<link rel="stylesheet" href="style.css">
-<script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
 </body>
+
 </html>
