--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body>
     <h1 class="titulo">Contador</h1>
-    <p id="resultado"></p>
+    <p id="resultado">0</p>
 
-    <button onclick="menos" class="dim">Diminuir</button>
-    <button onclick="mais" class="add">Adicionar</button>
+    <button onclick="menos()" class="dim">Diminuir</button>
+    <button onclick="mais()" class="add">Adicionar</button>
 
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
