--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <button onclick="menos()" class="dim">Diminuir</button>
     <button onclick="mais()" class="add">Adicionar</button>
-
+    <button onclick="zerar()" class="clear">Zerar</button>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </body>
